# jacko.io

./: .gitignore  duct.md  iterator_invalidation.md  nginx.conf  not_atomic.go  peru.yaml  push.py  pythonic.rs
blog/: safety_and_soundness.md
posts/: async_1.md  async_five.md  async_four.md  async_futures.md  async_intro.md  async_io.md  async_one.md  async_tasks.md  async_three.md  async_two.md  chinese_names.md  mandarin_names.md  object_soup.md  safety_and_soundness.md  select.md  smart_pointers.md  snooze.md  tree_hashing.md
posts/async_playground/: Cargo.toml  basketball.rs  basketball_futures.rs  basketball_tasks.rs  basketball_threads.rs  boxed_recursion.rs  client_server.rs  client_server_busy.rs  client_server_poll.rs  foo.rs  foo_blocking.rs  foo_printing.rs  foo_timing.rs  intro.rs  job.rs  job_blocking.rs  job_timing.rs  join.rs  loop.rs  loop_forever_10.rs  loop_forever_100.rs  no_pin.rs  perf_stat.sh  rayon.rs  rustfmt.toml  single_threaded_client.rs  single_threaded_server.rs  skip_wakers.rs  sleep_busy.rs  sleep_busy_dbg.rs  sleep_forever.rs  sleep_forever_dbg.rs  sleep_many_threads.rs  sleep_one_thread.rs  tasks.rs  tasks_no_join.rs  tasks_no_spawn.rs  tasks_noop_waker.rs  tasks_spawn.rs  thread_local.rs  (+21 more)
posts/async_playground/compiler_errors/: Cargo.toml  error.rs  foo_ref.rs  foo_ref_lifetime.rs  recursion.rs  tasks_no_send_no_static.rs  tasks_no_static.rs  tasks_one_send_no_static.rs
posts/select_playground/: Cargo.toml  select.rs  select_deadlock_1.rs  select_deadlock_2.rs  select_loop.rs  select_loop_woops.rs  tokio_select.rs
posts/snooze_playground/: Cargo.toml  async_gen_example.rs  foo.rs  foo_buffered.rs  foo_buffered_unfair.rs  foo_fork.rs  foo_futures.rs  foo_join.rs  foo_join_me_maybe.rs  foo_join_me_maybe_cancel.rs  foo_join_me_maybe_return.rs  foo_join_me_maybe_streams.rs  foo_moro.rs  foo_poll.rs  foo_poll_box.rs  foo_poll_fn.rs  foo_poll_struct.rs  foo_select.rs  foo_select_arm.rs  foo_select_arms.rs  foo_select_box.rs  foo_select_function.rs  foo_select_loop.rs  foo_select_streams.rs  foo_select_value.rs  foo_signal.rs  foo_stream_macro.rs  foo_stream_timeout.rs  foo_sync.rs  foo_unordered.rs  once_cell_example.rs
render_posts/: Cargo.toml  solarized_dark.json  solarized_light.json
render_posts/src/: main.rs
www/: index.html  keybase.txt  rss.xml  tufte.css
www/files/: index.html
