[package]
name = "async_playground"
version = "0.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
futures = "0.3.30"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.39.3", features = ["full"] }

[[bin]]
name = "threads"
path = "threads.rs"

[[bin]]
name = "threads_100"
path = "threads_100.rs"

[[bin]]
name = "threads_1k"
path = "threads_1k.rs"

[[bin]]
name = "rayon"
path = "rayon.rs"

[[bin]]
name = "tokio"
path = "tokio.rs"

[[bin]]
name = "tokio_10"
path = "tokio_10.rs"

[[bin]]
name = "tokio_1k"
path = "tokio_1k.rs"

[[bin]]
name = "tokio_1m"
path = "tokio_1m.rs"

[[bin]]
name = "tokio_blocking"
path = "tokio_blocking.rs"

[[bin]]
name = "tokio_serial"
path = "tokio_serial.rs"

[[bin]]
name = "foo"
path = "foo.rs"

[[bin]]
name = "foo_timing"
path = "foo_timing.rs"

[[bin]]
name = "foo_blocking"
path = "foo_blocking.rs"

[[bin]]
name = "join"
path = "join.rs"

[[bin]]
name = "sleep_forever"
path = "sleep_forever.rs"
[[bin]]
name = "sleep_forever_dbg"
path = "sleep_forever_dbg.rs"

[[bin]]
name = "sleep_busy"
path = "sleep_busy.rs"

[[bin]]
name = "sleep_busy_dbg"
path = "sleep_busy_dbg.rs"

[[bin]]
name = "sleep_many_threads"
path = "sleep_many_threads.rs"

[[bin]]
name = "sleep_one_thread"
path = "sleep_one_thread.rs"

[[bin]]
name = "loop"
path = "loop.rs"

[[bin]]
name = "loop_forever_10"
path = "loop_forever_10.rs"

[[bin]]
name = "loop_forever_100"
path = "loop_forever_100.rs"

[[bin]]
name = "wakers"
path = "wakers.rs"

[[bin]]
name = "thread_local"
path = "thread_local.rs"

[[bin]]
name = "timeout"
path = "timeout.rs"

[[bin]]
name = "boxed_recursion"
path = "boxed_recursion.rs"

[[bin]]
name = "tokio_tasks"
path = "tokio_tasks.rs"

[[bin]]
name = "tasks"
path = "tasks.rs"

[[bin]]
name = "no_pin"
path = "no_pin.rs"
