[package]
name = "snooze_playground"
version = "0.0.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "foo"
path = "foo.rs"

[[bin]]
name = "foo_join"
path = "foo_join.rs"

[[bin]]
name = "foo_futures"
path = "foo_futures.rs"

[[bin]]
name = "foo_poll"
path = "foo_poll.rs"

[[bin]]
name = "foo_poll_fn"
path = "foo_poll_fn.rs"

[[bin]]
name = "foo_select"
path = "foo_select.rs"

[[bin]]
name = "foo_unordered"
path = "foo_unordered.rs"

[[bin]]
name = "foo_buffered"
path = "foo_buffered.rs"
