[package]
name = "snooze_playground"
version = "0.0.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
join_me_maybe = "0.5.0"
libc = "0.2.180"
moro = "0.4.0"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "foo"
path = "foo.rs"

[[bin]]
name = "foo_join"
path = "foo_join.rs"

[[bin]]
name = "foo_futures"
path = "foo_futures.rs"

[[bin]]
name = "foo_poll"
path = "foo_poll.rs"

[[bin]]
name = "foo_poll_fn"
path = "foo_poll_fn.rs"

[[bin]]
name = "foo_poll_struct"
path = "foo_poll_struct.rs"

[[bin]]
name = "foo_unordered"
path = "foo_unordered.rs"

[[bin]]
name = "foo_buffered"
path = "foo_buffered.rs"

[[bin]]
name = "foo_buffered_unfair"
path = "foo_buffered_unfair.rs"

[[bin]]
name = "foo_moro"
path = "foo_moro.rs"

[[bin]]
name = "foo_select_loop"
path = "foo_select_loop.rs"

[[bin]]
name = "foo_select_value"
path = "foo_select_value.rs"

[[bin]]
name = "foo_select_streams"
path = "foo_select_streams.rs"

[[bin]]
name = "foo_join_me_maybe"
path = "foo_join_me_maybe.rs"

[[bin]]
name = "foo_join_me_maybe_return"
path = "foo_join_me_maybe_return.rs"

[[bin]]
name = "foo_join_me_maybe_cancel"
path = "foo_join_me_maybe_cancel.rs"

[[bin]]
name = "foo_join_me_maybe_streams"
path = "foo_join_me_maybe_streams.rs"

[[bin]]
name = "foo_sync"
path = "foo_sync.rs"

[[bin]]
name = "foo_fork"
path = "foo_fork.rs"

[[bin]]
name = "foo_signal"
path = "foo_signal.rs"

[[bin]]
name = "async_gen_example"
path = "async_gen_example.rs"
